fix genres and categories init and fix specific catalog